--- a/index.html
+++ b/index.html
@@ -5,29 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Project on rest API</h1>
-    <form onsubmit="savetolocal(event)">
-        <label for="item">Choose items</label>
-        <input type="text" id="item">
-        <label for="price">Choose Price</label>
-        <input type="text" id="price">
-        <label for="table">Choose Table</label>
-        <select name="table" id="table">
-            <option value="table1">Table 1</option>
-            <option value="table2">Table 2</option>
-            <option value="table3">Table 3</option>
-        </select>
-        <input type="submit" id="submit" value="Add bill">
-    </form>
-    <h2>Tables</h2>
-    <h3>Table 1</h3>
-    <ul id="table1"></ul>
-    <h3>Table 2</h3>
-    <ul id="table2"></ul>
-    <h3>Table 3</h3>
-    <ul id="table3"></ul>
+    <div class="container">
+        <h1 class="text-center">Restaurant App</h1>
+        <form id="store-form" onsubmit="savetolocal(event)">
+            <div class="text-center my-3">
+            <label for="item">Choose items</label>
+            <input type="text" id="item" placeholder="Enter the item">
+            <label for="price">Item Price</label>
+            <input type="number" id="price" placeholder="Enter the amount">
+            <label for="table">Choose Table</label>
+                <select name="table" id="table">
+                  <option value="table1">Table 1</option>
+                  <option value="table2">Table 2</option>
+                  <option value="table3">Table 3</option>
+                </select>
+            <input type="submit" id="submit" value="Add bill">
+            </div>         
+        </form>
+            <h2>Orders</h2>
+            <h3>Table 1</h3>
+            <ul id="table1"></ul>
+            <h3>Table 2</h3>
+            <ul id="table2"></ul>
+            <h3>Table 3</h3>
+            <ul id="table3"></ul>
+     
+    </div>
+    
 
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
