--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Restaurant</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style1.css">
+    <!-- <link rel="stylesheet" href="style1.css"> -->
 </head>
 <body>
     <div class="container">
         <h1 class="text-center">Restaurant App</h1>
-        <form id="store-form" onsubmit="savetolocal(event)">
+        <form id="store-form" onsubmit="savetoobject(event)">
             <div class="text-center my-3">
             <label for="item">Choose items</label>
             <input type="text" id="item" placeholder="Enter the item">
